fix performance on mobile for images

--- a/site/public/styles/site/layout.less
+++ b/site/public/styles/site/layout.less
@@ -42,10 +42,7 @@
   }
 }
 
-#face
-{
-  width:200px;
-}
+
 .navbar-default
 {
   border-color:#cccccc;
